# 0-cfa

./: .gitignore  0cfa.dl  CHANGELOG.md  LICENSE  README.md  cfa.cabal  test.lambda
src/: Main.hs
src/Syntax/: Ast.hs  Parser.hs
