cabal-version:      3.8
name:               cfa
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Nathan Waltz
maintainer:         waltznr@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

executable cfa
  -- re-use your warning flags:
  import:           warnings

  -- where to find your Main.hs:
  hs-source-dirs:   src

  -- your entry point:
  main-is:          Main.hs

  other-modules:
    Syntax.Ast,
    Syntax.Parser

  -- base library:
  build-depends:
    base ^>=4.17.2.1,
    megaparsec >= 9.0 && < 10,
    text ^>= 1.2,
    mtl ^>= 2.3.1,
    containers ^>= 0.7

  -- LANGUAGE and extensions:
  default-language: Haskell2010
  default-extensions: OverloadedStrings
